# plasma-icinga

./: CMakeLists.txt  icinga-status-monitor.kdev4
dataengine/: CMakeLists.txt  icinga-status-monitor-dataengine.desktop  icingadataengine.cpp  icingadataengine.h
plasmoid/: CMakeLists.txt  extendedstatus.cpp  extendedstatus.h  icinga-status-monitor-plasmoid.desktop  icingaplasmoid.cpp  icingaplasmoid.h
